--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="https://html5up.net/" class="logo"><strong>Website Design</strong> <span>by HTML5 UP</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -52,7 +52,7 @@
 								<p>A personal website for the professional career of Alvie Hossain<br />
 								</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">More Information</a></li>
 								</ul>
 							</div>
 						</div>
@@ -68,8 +68,11 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">About</a></h3>
+										<p>"To me, mathematics, computer science, and the arts are insanely related. They're all creative expressions." - Sebastian Thrun</p>
+< /br> It's the area of creative expression that I find myself most excited about. This quote has significance to me, because as much as I am a Computer Scientist, I'm also an active musician. There is a similarity in all of it, and I hope I can show that through my work over the years to come. 
+
+< /br> I've found myself involved in many different areas of life including academics, computer science, music, fine arts, athletics, gaming, entrepeneurship, etc. There are many more places for me to stick my head in and come to know. I hope to add a holistic view of all of the projects I work on, so that it can be universally compatible, intuitive, and understandable. My experience in these different
 									</header>
 								</article>
 								<article>
@@ -77,7 +80,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
+										<h3><a href="landing.html" class="link">Work</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
@@ -86,7 +89,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
+										<h3><a href="landing.html" class="link">Interests</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -95,7 +98,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<h3><a href="landing.html" class="link">Future Projects</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
