About section update

--- a/index.html
+++ b/index.html
@@ -69,10 +69,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">About</a></h3>
-										<p>"To me, mathematics, computer science, and the arts are insanely related. They're all creative expressions." - Sebastian Thrun</p>
-< /br> It's the area of creative expression that I find myself most excited about. This quote has significance to me, because as much as I am a Computer Scientist, I'm also an active musician. There is a similarity in all of it, and I hope I can show that through my work over the years to come. 
-
-< /br> I've found myself involved in many different areas of life including academics, computer science, music, fine arts, athletics, gaming, entrepeneurship, etc. There are many more places for me to stick my head in and come to know. I hope to add a holistic view of all of the projects I work on, so that it can be universally compatible, intuitive, and understandable. My experience in these different
+										<p> "To me, mathermatics, computer science, and the arts are insanely related. They're all creative expressions" </p>
 									</header>
 								</article>
 								<article>
