About section updated, links added, email first attempt

--- a/landing.html
+++ b/landing.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Alvie J. Hossain</strong> <span>Programmer</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -86,9 +86,13 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Computer Science History</h3>
+												<h3>Computer Science Activites</h3>
 											</header>
-											<p>The History for this section is so far </p>
+											<p>As of recently, I've been involved in the 2018 MLH Hacking Season, attending 2 of their hackathons this year.
+												I'm registered to attend 3 more so far for the season, and can't wait to work on many more projects.</p>
+
+											<p>Currently involved in a program at the University of Delaware called VIP, working within a team on Drone 
+												Technology, and applications for it.</p> 
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -102,9 +106,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h3>Interests</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p> Currently extermely interested in new technologies. < /br>
+											Artificial Intelligence. Augmented Reality. Data Science. Cryptography and Cybersecurity. </p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
