--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/alvie_hossain@yahoo.com">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -162,22 +162,21 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">alvie_hossain@yahoo.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>(302) - 588- 7120</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
+										<h3>Location</h3>
+										<span>Northern Delaware<br />
 										United States of America</span>
 									</div>
 								</section>
@@ -192,8 +191,8 @@
 								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/TheDroppedD/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="www.linkedin.com/in/alviehossain" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
