--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/TheDroppedD/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="www.linkedin.com/in/alviehossain" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/alviehossain" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
