small changes added, more flesh

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="https://html5up.net/" class="logo"><strong>Website Design</strong> <span>by HTML5 UP</span></a>
+						<a href="https://html5up.net/" class="logo"><strong>Alvie J. Hossain</strong> <span>Programmer</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,13 +31,12 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
+							<li><a href="landing.html">About Me</a></li>
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#" class="button special fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
 
@@ -47,6 +46,7 @@
 							<header class="major">
 								<h1>Alvie J. Hossain</h1>
 								<br /> Leader. Innovator. Determined.
+								<br /> Welcome To My Webpage, a Small Overview of Me!
 							</header>
 							<div class="content">
 								<p>A personal website for the professional career of Alvie Hossain<br />
@@ -169,7 +169,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(302) - 588- 7120</span>
+										<span>(302) 588- 7120</span>
 									</div>
 								</section>
 								<section>
