--- a/landing.html
+++ b/landing.html
@@ -108,8 +108,8 @@
 											<header class="major">
 												<h3>Interests</h3>
 											</header>
-											<p> Currently extermely interested in new technologies. < /br>
-											Artificial Intelligence. Augmented Reality. Data Science. Cryptography and Cybersecurity. </p>
+											<p> Currently extermely interested in new technologies.</p>
+											<p>Artificial Intelligence. Augmented Reality. Data Science. Cryptography and Cybersecurity. </p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -123,10 +123,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Sed nunc ligula</h3>
+												<h3>Personal Activities</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
+											<p>Currently I am searching for more oppurtunities to be involved in theatre, and music production.
+												</p><ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
@@ -153,7 +153,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/alvie_hossain@yahoo.com">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
