contact button made in hamburger menu

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">About Me</a></li>
-							<li><a href="generic.html">Generic</a></li>
+							<li><a href="generic.html">Previous Work</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
+							<li><a href="#contact" class="button fit">Contact Alvie J. Hossain</a></li>
 						</ul>
 					</nav>
 
@@ -77,8 +77,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Work</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="generic.html" class="link">Previous Work</a></h3>
+										<p>Projects from the Past</p>
 									</header>
 								</article>
 								<article>
@@ -87,7 +87,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Interests</a></h3>
-										<p>Lorem etiam nullam</p>
+										<p>What's Most Worth Doing</p>
 									</header>
 								</article>
 								<article>
@@ -96,16 +96,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Future Projects</a></h3>
-										<p>Nisl sed aliquam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<p>What I Want to Do, What Should be Done</p>
 									</header>
 								</article>
 								<article>
@@ -113,8 +104,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Opinions</a></h3>
+										<p>Beliefs, Theories, and Philosophies I hold, that may be evident in my work</p>
 									</header>
 								</article>
 							</section>
@@ -189,14 +180,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/TheDroppedD/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/alviehossain" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
