--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="#contact" class="button next scrolly">Contact Alvie J. Hossain</a></li>
+							<li><a href="#contact" class="button fit">Contact Alvie J. Hossain</a></li>
 						</ul>
 					</nav>
 
