Previous Work Page Started, Button fixes

--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Forty by HTML5 UP</title>
+		<title>Previous Work</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Alvie J. Hossain</strong> <span>Previous Work</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,13 +31,12 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
+							<li><a href="landing.html">About Me</a></li>
+							<li><a href="generic.html">Previous Work</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="index.html" class="button special fit">Contact Alvie J. Hossain</a></li>
 						</ul>
 					</nav>
 
@@ -48,12 +47,27 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic</h1>
+										<h1>Previous Work</h1>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<p>Most recently, at <a href = "http://hackumbc.org/">HackUMBC</a>, a MLH Hackathon my group of 3 and I built a (incomplete) WebApp
+										called <a href = "www.psynopsys.org">Psynopsys</a>. The WebApp has not fully implemented the tools we created but it will as
+										soon as my team can remeet and do some debugging. Psynopsys is a WebApp created with the intent to help loved ones, 
+										counselors, parents, etc. pick up on, and more confidently help someone out with mental health issues. The WebApp has the
+										potential to scrape a user's Facebook, Twitter, Instagram profiles, as well as take in raw text to emotionally analyze the 
+										text. The text is then analyzed using  
+										an API from <a href = "https://www.ibm.com/watson/">IBM Watson</a> called
+										 <a href = "https://www.ibm.com/watson/services/tone-analyzer/</p>">Tone Analyzer</a>. Tone Analyzer is a Machine Learning
+										service that gives the probabilities of a certain emotion reflected in text. Our team created an algorithim to 
+										interpret multiple messages with different emotional sentiments to show a likeliness for the person to be at risk
+										for various kinds of mental health issues like depression, and anxiety. What's done is 24 hours of hackathon work, and there											is much to come!
+										</p>
+									
+									<p>Computer Science is a field unlike many others, distinguished by the cosntant evolution of a the tools and options of a computer 										scientist. Because of this, it is important to be versed in many languages, and be able to self teach yourself many different
+										concepts and issues. At my first hackathon, <a href = "https://hophacks.com/">HopHacks 2017</a>, my partner and I decided
+										we would attempt to hone this skills and build a game of <a href = "https://github.com/TheDroppedD/TexasHoldEm">Poker</a> in 											a new language to us, C#. A good first experience, and example of quick self teaching.
+										</p>									 
+
 								</div>
 							</section>
 
