Previous Work Page fleshing out. Almost DOne

--- a/landing.html
+++ b/landing.html
@@ -37,7 +37,7 @@
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
+							<li><a href="index.html" class="button fit">Contact Alvie J. Hossain</a></li>
 						</ul>
 					</nav>
 
@@ -188,7 +188,7 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
+										<h3>Location</h3>
 										<span>Northern Delaware<br />
 										United States of America</span>
 									</div>
@@ -201,14 +201,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/TheDroppedD/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/alviehossain" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
