--- a/generic.html
+++ b/generic.html
@@ -36,7 +36,7 @@
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="index.html" class="button special fit">Contact Alvie J. Hossain</a></li>
+							<li><a href="index.html" class="button fit">Contact Alvie J. Hossain</a></li>
 						</ul>
 					</nav>
 
@@ -63,10 +63,14 @@
 										for various kinds of mental health issues like depression, and anxiety. What's done is 24 hours of hackathon work, and there											is much to come!
 										</p>
 									
-									<p>Computer Science is a field unlike many others, distinguished by the cosntant evolution of a the tools and options of a computer 										scientist. Because of this, it is important to be versed in many languages, and be able to self teach yourself many different
+									<p>Computer Science is a field unlike many others, distinguished by the constant evolution of a the tools and options of a computer 										scientist. Because of this, it is important to be versed in many languages, and be able to self teach yourself many different
 										concepts and issues. At my first hackathon, <a href = "https://hophacks.com/">HopHacks 2017</a>, my partner and I decided
 										we would attempt to hone this skills and build a game of <a href = "https://github.com/TheDroppedD/TexasHoldEm">Poker</a> in 											a new language to us, C#. A good first experience, and example of quick self teaching.
-										</p>									 
+										</p>
+
+									<p>Most of my other previous work is posted onto <a href = "https://github.com/TheDroppedD/">Github</a>, there is not much so far, 
+										but my feet are fresh in the world of computer science, and there is more to come! Stay tuned! Currently building websites,
+										writing algorithims, and trying to innovate our world.</p>									 
 
 								</div>
 							</section>
@@ -77,7 +81,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/alvie_hossain@yahoo.com">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -101,22 +105,21 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">alvie_hossain@yahoo.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>(302) 588-7120</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
+										<h3>Location</h3>
+										<span>Northern Delaware<br />
 										United States of America</span>
 									</div>
 								</section>
@@ -128,14 +131,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/TheDroppedD/" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/alviehossain" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
