Interests Page fixed, small changes done

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">About Me</a></li>
 							<li><a href="generic.html">Previous Work</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="interests.html">Interests</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="#contact" class="button special fit">Contact Alvie J. Hossain</a></li>
@@ -86,7 +86,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Interests</a></h3>
+										<h3><a href="interests.html" class="link">Interests</a></h3>
 										<p>What's Most Worth Doing</p>
 									</header>
 								</article>
