--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<li><a href="interests.html">Interests</a></li>
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="#contact" class="button special fit">Contact Alvie J. Hossain</a></li>
+							<li><a href="#contact" class="button fit">Contact Alvie J. Hossain</a></li>
 						</ul>
 					</nav>
 
@@ -46,7 +46,7 @@
 							<header class="major">
 								<h1>Alvie J. Hossain</h1>
 								<br /> Leader. Innovator. Determined.
-								<br /> Welcome To My Webpage, a Small Overview of Me!
+								<br /> Welcome To My Webpage.
 							</header>
 							<div class="content">
 								<p>A personal website for the professional career of Alvie Hossain<br />
