--- a/interests.html
+++ b/interests.html
@@ -36,7 +36,7 @@
                  </ul>
           </nav>
  <!-- Main -->
-                                        <div id="main" class="alt">
+	<div id="main" class="alt">
 
                                                 <!-- One -->
                                                         <section id="one">
@@ -45,17 +45,28 @@
                                                                                 <h1>Interests</h1>
                                                                         </header>
                                                                         <span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-                                                                        <p> My interest currently mostly involve Machine Learning. I plan to graduate from my undergraduate program with a minor
+                                                                        
+										<h2>Machine Learning</h2>
+										<p> My interest currently mostly involve Machine Learning. I plan to graduate from my undergraduate program with a minor
 										in Cognitive Science specifically for machine learning. I believe the future of computing heavily involves very smart
 										AI. </br >
 
-										 It is of my personal interest in teaching the AI the best ways to teach us. As the famous American Physicist once said 
+										 It is of my personal interest in teaching the AI the best ways to teach us. As the famous American Physicist Richard Feynamn once said 
 										"If you can't explain something to a first year student, then you haven't really understood it." If AI in the future 
 										would be able to condense complex ideas and fundamentals into small chunks, human education is greatly beneficial.
 										It is to my belief if humankind were to pull this feat off how I imagine it, we may shift our age from 'The Information
 										Age' to the 'Education Age'. A large part of the progression of humankind, whether it be technological, idealogical,
 										or what-have-you is limited by how quickly human kind can keep up. A future  
-										</p<
+										</p>
+
+										<h2>Blockchain</h2>
+										<p> The rise of Bitcoin has made it very clear that blockchain technology is something to pay attention to in the next
+										coming years. Any technology implementing a similar decentralizing system is also something to pay attention to. </p>
+
+										<h2>Cryptography and Web Security</h2>
+										<p>The rise of technology and it's influence on society raises large concern in the areas of security. With recent hacking
+										incidents like the ones with Equifax, Sony, etc. If society wants to depend on technology more, there needs to be major
+										improvements in our securities to ensure the survival of the technology we depend on.   
 											
 <!-- Contact -->
                                         <section id="contact">
