--- a/interests.html
+++ b/interests.html
@@ -19,7 +19,7 @@
 	<header id ="header" class= "alt">
 		<a href= index.html class="logo"><strong>Alvie J. Hossain</strong> <span>Interests</span></a>
 		<nav>
-			<a href= "menu">Menu</a>
+			<a href= "#menu">Menu</a>
 		</nav>
 	</header>
 
