--- a/generic.html
+++ b/generic.html
@@ -33,7 +33,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">About Me</a></li>
 							<li><a href="generic.html">Previous Work</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="elements.html">Interests</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="index.html" class="button fit">Contact Alvie J. Hossain</a></li>
