--- a/landing.html
+++ b/landing.html
@@ -33,8 +33,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">About Me</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">Previous Work</a></li>
+							<li><a href="elements.html">Interests</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="index.html" class="button fit">Contact Alvie J. Hossain</a></li>
@@ -110,7 +110,7 @@
 											<p> Currently extermely interested in new technologies.</p>
 											<p>Artificial Intelligence. Augmented Reality. Data Science. Cryptography and Cybersecurity. </p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="interests.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -124,7 +124,8 @@
 											<header class="major">
 												<h3>Personal Activities</h3>
 											</header>
-											<p>Currently I am searching for more oppurtunities to be involved in theatre, and music production.
+											<p>Currently I am searching for more oppurtunities to be involved in freelance programming, theatre, and 
+												music production.
 												</p><ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
